<resources>
    <string name="app_name">VARAN Design</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="web_client_id">174467723203-82orasjgr4bvkaic2tess2k8cf7sle4i.apps.googleusercontent.com</string>
    <string name="name_tag">Shopping</string>
    <string name="splash_que">Do not have an account?</string>
    <string name="splash_link">Sign In Here</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact">Contact No.</string>
    <string name="forget_password">Forget password!</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="register_link">Register now?</string>
    <string name="login_link">Login?</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_nav_home_title">HOME</string>
    <string name="bottom_nav_category_title">CATEGORY</string>
    <string name="bottom_nav_cart_title">CART</string>
    <string name="bottom_nav_profile_title">PROFILE</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_profile">Profile</string>
    <string name="category">Category</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="offers">Offers</string>
    <string name="new_products">New Products</string>
    <string name="new_designs">New Designs</string>
    <string name="menu_offers">Offers</string>
    <string name="menu_new_designs">New Designs</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_new_design">New Design</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
</resources>