<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/varan_logo_873x816_blur"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.LoginActivity"
    android:padding="10dp"
    android:backgroundTintMode="multiply"
    android:backgroundTint="@color/blue">

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center"
        android:textSize="36sp"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_gravity="center"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_gravity="center"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/forget_password_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/forget_password"
        android:textColor="@color/black"
        android:textSize="10sp"
        />
    <Button
        android:id="@+id/login_btn"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Sign In"
        app:cornerRadius="10sp"
        android:backgroundTint="@color/light_blue"
        />
    <TextView
        android:id="@+id/sign_up_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register_link"
        android:textColor="@color/white"
        android:textSize="14sp"
        />

    <com.github.ybq.android.spinkit.SpinKitView
        android:padding="10dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/spin_kit3"
        style="@style/SpinKitView.Large.ChasingDots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        app:SpinKit_Color="@color/black"
        android:layout_marginBottom="100dp"
        android:visibility="invisible"
        />


</LinearLayout>